2012-07-04  Ozkan Sezer  <sezeroz@gmail.com>

	* _mingw_mac.h (__MINGW_GCC_VERSION): New macro.
	* setjmp.h (setjmp): Use mingw_getsp() with gcc < 4.7.2.

2012-07-04  Kai Tietz  <ktietz@redhat.com>
	    Tristan Gingold <gingold@adacore.com>

	* setjmp.h (setjmp): Use frame-address builtin.
	Reformat #if/#else block.

2012-06-27  Corinna Vinschen  <vinschen@redhat.com>

	* _cygwin.h: Include stddef.h.

2012-06-26  Corinna Vinschen  <vinschen@redhat.com>

	* _cygwin.h: New file.
	* _mingw.h.in: Include _cygwin.h when building a Cygwin application.
	Allow building Cygwin applications even though _WIN32 isn't defined.
	* vadefs.h: Drop test for _WIN32 since it's done in _mingw.h.

2012-06-19  Kai Tietz  <ktietz@redhat.com>

	* math.h (logb, logbf): Special-case x64 inline.

	* math.h (__signbit, __signbitf): Special-case x64 inline.
	(copysign, copysignf): Likewise.

	* math.h (__isnan, __isnanf): Special-case x64 inline.

	* math.h (__fpclassify, __fpclassifyf): Special case x64.
	(__mingw_dbl_type_t): New type.
	(__mingw_ldbl_type_t): New type.
	(__mingw_flt_type_t): New type.

2012-06-15  Kai Tietz  <ktietz@redhat.com>

	* assert.h, process.h, stdlib.h (_exit,_cexit, _c_exit):
	Remove _CRTIMP specifier from prototype.

2012-06-15 niXman <i.nixman@gmail.com>

	* wchar.h (wmemcmp): Add missing __cdecl to prototype.
	* math.h (fabs, fabsf): Fix typo.

2012-05-31  Kai Tietz  <ktietz@redhat.com>

	* crtdefs.h (errcode): Don't define it by default.

2012-05-10  Christian Franke <Christian.Franke@t-...>
	    Kai Tietz  <ktietz@redhat.com>

	PR 3523559
	* stdio.h: Guard override-function for C++ to work-around
	a g++ bug about builtins and static overrides.

2012-04-10  Ozkan Sezer  <sezeroz@gmail.com>

	* _mingw.h (__int128, __SIZEOF_INT128__): Handle clang.

2012-03-01  Jonathan Yong  <jon_y@users.sourceforge.net>

	* errno.h: Add EOVERFLOW for msvc 2010 compatibility.

2012-02-24  Kai Tietz  <ktietz@redhat.com>

	PR/3468894